<resources>
    <string name="app_name">MetaIdeas</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_to_reset_your_password">Enter to reset your Password</string>
    <string name="enter_your_emailadress">Enter your Emailadress</string>
    <string name="send_resetting_link">Send resetting link</string>
    <string name="remember_me">Remember me</string>
    <string name="register">Register !</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_to_the_app">Welcome to the App</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="Addition">+</string>
    <string name="Subtraction">-</string>
    <string name="Multiplication">*</string>
    <string name="Division">/</string>
    <string name="the_result_will_be_here">The Result Will Be Here</string>
    <string name="r_e_s_e_t">R E S E T</string>
    <string name="calculator_app">CALCULATOR APP</string>
    <string name="random_highest_mountains">RANDOM HIGHEST MOUNTAINS</string>
    <string name="random_mountain">Random Mountain</string>
    <string name="welcome_to_our_random_highest_maountain_app">WELCOME TO OUR RANDOM HIGHEST MAOUNTAIN APP</string>
    <string name="generate_random_mountain">Generate Random Mountain</string>
    <string name="restaurant">RESTAURANT</string>
    <string name="welcome_to_our_restaurant">WELCOME TO OUR RESTAURANT</string>
    <string name="pizza">Pizza</string>
    <string name="_20">20$</string>
    <string name="burger">Burger</string>
    <string name="_25">25$</string>
    <string name="fried_chicken">Fried Chicken</string>
    <string name="_30">30$</string>
    <string name="pepsi">Pepsi</string>
    <string name="_5">5$</string>
    <string name="tea">Tea</string>
    <string name="_3">3$</string>
    <string name="orange_juice">Orange Juice</string>
    <string name="_6">6$</string>
    <string name="the_invoice_will_appear_here">The invoice will appear here</string>
    <string name="get_invoice">Get Invoice</string>
    <string name="dog_or_cat_app">DOG OR CAT APP</string>
    <string name="welcome_to_our_dog_or_cat_app">Welcome to Our Dog Or Cat App</string>
    <string name="when_talki_ng_to_someone_do_you_maintain_eye_contact">When talki ng to someone do you maintain eye contact?</string>
    <string name="never">Never</string>
    <string name="sometimes">Sometimes</string>
    <string name="always">Always</string>
    <string name="all_the_time">All the time</string>
    <string name="rarely">rarely</string>
    <string name="not_a_physical_person">Not a physical person</string>
    <string name="when_often_do_you_hug_people">When often do you hug people?</string>
    <string name="get_quiz_result">Get Quiz Result</string>
    <string name="result_will_appear_here">Result will appear here</string>
    <string name="java_t_point_website">JAVA T POINT WEBSITE</string>
    <string name="my_cv">MY CV</string>
    <string name="temperature_convertor_app">TEMPERATURE CONVERTOR APP</string>
    <string name="welcome_to_temp_app_convertor">Welcome to Temp App Convertor</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="convert">Convert</string>
    <string name="reset_values">Reset Values</string>
    <string name="media_player">MEDIA PLAYER</string>
    <string name="the_winner_is">The Winner is :</string>
    <string name="play_again">Play Again</string>
    <string name="google_maps">GOOGLE MAPS</string>
    <string name="x_o_game">X O GAME</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="api">API</string>
    <string name="login_as_a_guest">Login as a Guest</string>
</resources>