<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".RestaurantActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:text="@string/welcome_to_our_restaurant"
        android:textStyle="bold"
        android:textColor="#3F51B5"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/restlogo"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza"
                android:textSize="20sp"
                android:id="@+id/chk_pizza"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:layout_gravity="center"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/burger"
                android:id="@+id/chk_burger"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_25"
                android:layout_gravity="center"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/fried_chicken"
                android:id="@+id/chk_fried_chicken"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pepsi"
                android:textSize="20sp"
                android:id="@+id/chk_pepsi"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:layout_gravity="center"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tea"
                android:textSize="20sp"
                android:id="@+id/chk_tea"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:layout_gravity="center"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orange_juice"
                android:textSize="20sp"
                android:id="@+id/chk_orange_juice"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:layout_gravity="center"/>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:id="@+id/btn_get_invoice"
        android:layout_height="wrap_content"
        android:text="@string/get_invoice"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/tv_invoice"
        android:layout_height="wrap_content"
        android:text="@string/the_invoice_will_appear_here"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="15sp"/>



</LinearLayout>