<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/mlogoo"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_to_reset_your_password"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/enter_your_emailadress"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/btnResetLink"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/send_resetting_link"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>


</LinearLayout>